last commit still need to fix spacing errors

--- a/nicks-lobster-app/src/styles/contact.css
+++ b/nicks-lobster-app/src/styles/contact.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-start; 
-  padding-top: 450px;
+
   padding-left: 16px;
   padding-right: 16px;
   box-sizing: border-box;
